fixed header alignment

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+.flexJustify {
+  display: flex;
+  justify-content: space-between;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -168,6 +172,20 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+header {
+  border-bottom: 1px gray dashed;
+  padding: 2rem 0;
+}
+header .head {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 10%;
+}
+header .head nav a {
+  color: inherit;
+  text-decoration: none;
+  padding: 1rem;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -178,6 +196,9 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .topSection {
+  border-bottom: 1px dashed gray;
 }
 .home .content-section {
   margin: 30px 0;
