--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,9 @@
 .home {
 
+  .topSection {
+    border-bottom: 1px dashed gray;
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
