--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,7 @@
 // Mixins in here
+
+
+.flexJustify {
+    display: flex;
+    justify-content: space-between;   
+}
