--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,21 @@
 // Navigation Styles here
+
+
+
+header {
+    border-bottom: 1px gray dashed;
+    padding: 2rem 0;
+
+    .head {
+        .flexJustify();
+        margin: 0 10%;
+    
+
+
+        nav a {
+            color: inherit;
+            text-decoration: none;
+            padding: 1rem;
+        }
+    }   
+}
